# canals-workbench1

./: LICENSE  README.md  WINDOWS_BUILD.md  canals.spec  canals_mdi.py  pyproject.toml
.github/workflows/: README.md  build-windows-only.yml  build.yml
canals/: __init__.py  cli.py  earth_canal.py  flow_profile.py  hydraulic_jump.py  open_channel.py  reports.py  structures.py  water_hammer.py
canals/ui/: __init__.py
canals/ui/forms/: __init__.py  _report_helper.py  _widgets.py  earth_canal_form.py  flow_profile_form.py  hydraulic_jump_form.py  open_channel_form.py  structures_form.py  water_hammer_form.py
tests/: test_canals.py
