[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canals-workbench"
version = "1.4.0"
description = "Standalone Python 3 / PySide6 workbench for open-channel hydraulic design (open channels, structures, earth canals, flow profile, hydraulic jump, water hammer)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Abbas A. Hebah", email = "abbas74.hebah@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.scripts]
canals = "canals_mdi:main"
canals-cli = "canals.cli:main"

[project.urls]
Homepage = "https://github.com/abbas-hebah/canals-workbench"
Documentation = "https://github.com/abbas-hebah/canals-workbench/blob/main/docs/USER_GUIDE.md"
Issues = "https://github.com/abbas-hebah/canals-workbench/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["canals*"]
